User johns
Date:

    Release Version 0.5.1
    Fix bug: don't normalize or compress pass-through samples.
    Make audio ring buffer size a multiple of 3,5,7,8.
    Add reset ring buffer support.
    Fix bug: alloca wrong size for audio buffer.
    Handle jump in stream like stream start.
    Always compile audio drift correction.
    Add audio drift correction configuration to the setup.

User mini73
Date: Fri Apr 20 16:51:14 CEST 2012

    Add support for svdr command "stat".

User johns
Date: Fri Apr 20 16:05:40 CEST 2012

    Made showing black picture configurable.
    Show black picture, if no video stream is available.
    Setup split into foldable sections.
    Adds show cursor on pointer move and hide after 200ms.
    Adds Hot-key support for auto-crop enable/disable/toggle.
    Adds detached start mode.
    Fix bug: VDPAU looses preemption callback.
    Fix bug: X11 server keeps sending USR1 signals, which confuses suspend.
    Show message for hot-keys.
    Fix bug: playback errors with old PES recordings.
    Adds Hot-key support for 4:3 zoom modes.

User johns
Date: Sat Apr  7 20:21:16 CEST 2012

    Release Version 0.5.0
    Change audio/video delay with hot-key.
    Enable/disable/toggle fullscreen with hot-key (Feature #930).

User: CafeDelMar
Date: Thu Apr  5 22:44:06 CEST 2012

    Cutting pixels are now configured for each resolution.

User johns
Date: Thu Apr 5 15:47:59 CEST 2012

    Buffer less video and audio.
    Fix 100% cpu use, with mp3 plugin.
    Audio/Video sync rewrite, trick-speed support moved to video.
    Faster VdpauBlackSurface version.
    Fix bug: VideoSetPts wrong position for multi frame packets.

User: CafeDelMar
Date: Mon Mar 26 20:45:54 CEST 2012

    Add VideoSkipPixels support.

User johns
Date: Fri Mar 23 18:43:20 CET 2012

    Add optional argument (display) to ATTA svdrp commmand.
    Wakeup display to show OSD for remote learning mode.
    Support switching the primary device with svdrp.